<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/navigation_one"
            android:icon="@drawable/ic_archive"
            android:title="@string/_1" />

        <item
            android:id="@+id/navigation_two"
            android:icon="@drawable/ic_send"
            android:title="@string/_2" />

        <item
            android:id="@+id/navigation_three"
            android:title="@string/_4_1" />

        <item
            android:id="@+id/navigation_four"
            android:title="@string/_4_2" />

        <item
            android:id="@+id/navigation_five"
            android:title="@string/_5" />

        <item
            android:id="@+id/navigation_five_explode"
            android:title="@string/_5_explode" />

        <item
            android:id="@+id/navigationFiveObjectAnimator"
            android:title="@string/objectAnimator" />

        <item
            android:id="@+id/navigationFiveStateListAnimator"
            android:title="@string/stateListAnimator" />

<!--        <item-->
<!--            android:id="@+id/navigationFiveConstraintSet"-->
<!--            android:title="@string/constraintSet" />-->

        <item
            android:id="@+id/lessonSix"
            android:title="@string/lesson_6" />

    </group>
</menu>
