<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.appcompat.widget.SwitchCompat
                android:background="@drawable/play_pause_circle"
                android:backgroundTint="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumb="@null" />
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/myDefault" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipEntry"
                    style="@style/Widget.MaterialComponents.Chip.Entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/myDefault" />

                <com.google.android.material.chip.Chip

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/myDefault" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/myDefault" />

                <com.google.android.material.chip.Chip
                    style="@style/myChipChoiceStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choice" />
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/myDefault" />

                    <com.google.android.material.chip.Chip

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/myDefault" />

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/myDefault" />

                    <com.google.android.material.chip.Chip

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/myDefault" />

                    <com.google.android.material.chip.Chip

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/myDefault" />

                    <com.google.android.material.chip.Chip

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/myDefault" />

                    <com.google.android.material.chip.Chip

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/myDefault" />

                    <com.google.android.material.chip.Chip

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/myDefault" />
                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingBottom="16dp">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.tabs.TabItem

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_1" />

                <com.google.android.material.tabs.TabItem

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_2" />

                <com.google.android.material.tabs.TabItem

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_3" />
            </com.google.android.material.tabs.TabLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView"
                android:layout_margin="20dp"
                app:cardElevation="20dp"

                android:layout_width="match_parent"
                android:layout_height="100dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavigationView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/menu_bottom_navigation" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/dp_16">

            <Button
                android:id="@+id/dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark" />

            <Button
                android:id="@+id/light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:text="@string/light" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>
